RESOLVED FIXED250532
OffscreenCanvas WebGL doesn't fire the context lost event
https://bugs.webkit.org/show_bug.cgi?id=250532
Summary OffscreenCanvas WebGL doesn't fire the context lost event
Matt Woodrow
Reported 2023-01-12 15:36:32 PST
We're currently on sending the event if we have an HTMLCanvasElement.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-12 15:36:50 PST
Matt Woodrow
Comment 2 2023-01-12 15:43:21 PST
EWS
Comment 3 2023-02-27 22:28:32 PST
Committed 260924@main (903910f95dd3): <https://commits.webkit.org/260924@main> Reviewed commits have been landed. Closing PR #8597 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.