Cherry-pick 903910f95dd3. rdar://problem/107430896

OffscreenCanvas WebGL doesn't fire the context lost event.
    https://bugs.webkit.org/show_bug.cgi?id=250532
    <rdar://104198422>

    Reviewed by Ryosuke Niwa.

    Adds support for dispatching the event to OffscreenCanvas too, and enables the WebGL tests that cover this.

    * LayoutTests/TestExpectations:
    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebCore/html/CanvasBase.h:
    * Source/WebCore/html/CustomPaintCanvas.h:
    * Source/WebCore/html/HTMLCanvasElement.cpp:
    (WebCore::HTMLCanvasElement::queueTaskKeepingObjectAlive):
    (WebCore::HTMLCanvasElement::dispatchEvent):
    * Source/WebCore/html/HTMLCanvasElement.h:
    * Source/WebCore/html/OffscreenCanvas.cpp:
    (WebCore::OffscreenCanvas::create):
    (WebCore::OffscreenCanvas::OffscreenCanvas):
    (WebCore::OffscreenCanvas::transferToImageBitmap):
    (WebCore::OffscreenCanvas::queueTaskKeepingObjectAlive):
    (WebCore::OffscreenCanvas::dispatchEvent):
    * Source/WebCore/html/OffscreenCanvas.h:
    * Source/WebCore/html/OffscreenCanvas.idl:
    * Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
    (WebCore::WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent):
    (WebCore::WebGLRenderingContextBase::maybeRestoreContext):
    * Source/WebCore/html/canvas/WebGLSync.cpp:
    (WebCore::WebGLSync::scheduleAllowCacheUpdate):

    Canonical link: https://commits.webkit.org/260924@main

Identifier: 259548.526@safari-7615-branch